--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
     <link rel="stylesheet" href="style/new_year.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -20,8 +21,22 @@
         </div>
         
     </div>
-
   </header>
+  <main>
+    <section class="failure">
+        <img src="images/person.png" alt="Person">
+        <div class="failure-info">
+            <h3 class="failure-title">My failures of <br>previous year</h3>
+            <p class="failure-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</p>
+            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief.</p>
+            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</p>
+            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</p>
+            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular simply.</p>
+
+        </div>
+    </section>
+  </main>
 </body>
 
 </html>
