--- a/index.html
+++ b/index.html
@@ -6,37 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
     <link rel="stylesheet" href="style/new_year.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  <header>
-    <div class="banner-info">
-        <h1 class="banner-title">All Thinks Are <br>Possible If You <br>believe</h1>
-        <p class="banner-paragraph">
-            There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br>form, by injected humour, or randomised words
-        </p>
-        <div class="banner-btn">
-            <button class="btn-primary">Contact Us</button>
-        </div>
-        
-    </div>
-  </header>
-  <main>
-    <section class="failure">
-        <img src="images/person.png" alt="Person">
-        <div class="failure-info">
-            <h3 class="failure-title">My failures of <br>previous year</h3>
-            <p class="failure-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</p>
-            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief.</p>
-            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</p>
-            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</p>
-            <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular simply.</p>
+    <header>
+        <div class="banner-info">
+            <h1 class="banner-title">All Thinks Are <br>Possible If You <br>believe</h1>
+            <p class="banner-paragraph">
+                There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered
+                alteration in some <br>form, by injected humour, or randomised words
+            </p>
+            <div class="banner-btn">
+                <button class="btn-primary">Contact Us</button>
+            </div>
 
         </div>
-    </section>
-  </main>
+    </header>
+    <main>
+        <section class="failure">
+            <img src="images/person.png" alt="Person">
+            <div class="failure-info">
+                <h3 class="failure-title">My failures of <br>previous year</h3>
+                <p class="failure-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                    roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                    McClintock.</p>
+                <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.
+                </p>
+                <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief.</p>
+                <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</p>
+                <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.
+                </p>
+                <p class="common-mistake"><i class="fa-solid fa-check"></i>Contrary to popular simply.</p>
+
+            </div>
+        </section>
+        <section class="plan">
+            <h1 class="plan-title">My Plan</h1>
+            <div class="plan-container">
+                <div class="plan-desc">
+                    <img src="images/icons/web.png" alt="" class="plan-img">
+                    <h1 class="plan-desc-title">
+                        Web Development
+                    </h1>
+                    <p class="plan-desc-paragraph">I want to Finish</p>
+                </div>
+                <div class="plan-desc">
+                    <img src="images/icons/js.png" alt="" class="plan-img">
+                    <h1 class="plan-desc-title">
+                        Javascript
+                    </h1>
+                    <p class="plan-desc-paragraph">I want to learn</p>
+                </div>
+                <div class="plan-desc">
+                    <img src="images/icons/smoke.png" alt="" class="plan-img">
+                    <h1 class="plan-desc-title">
+                        Smoking Habit
+                    </h1>
+                    <p class="plan-desc-paragraph">I want to end</p>
+                </div>
+                <div class="plan-desc">
+                    <img src="images/icons/ecom.png" alt="" class="plan-img">
+                    <h1 class="plan-desc-title">
+                        ecommerce
+                    </h1>
+                    <p class="plan-desc-paragraph">I want to Develop</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
