--- a/index.html
+++ b/index.html
@@ -76,7 +76,40 @@
                 </div>
             </div>
         </section>
+        <section class="parent">
+            <div class="child">
+                <h1 class="child-title">Awlays keep a positive <br>mindset</h1>
+                <div class="child-btn">
+                    <button class="btn-secondary">Call Now</button>
+                </div>
+                
+            </div>
+        </section>
     </main>
+
+    <footer class="footer-parent">
+        <div class="footer-info">
+            <h1 class="footer-title">Future</h1>
+            <p class="footer-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p>Email: Kawserahmed8492@gmail.com</p>
+            <p>Mobile: 01996408492</p>
+            <img src="images/icons/fb.png" alt="">
+            <img src="images/icons/twitter.png" alt="">
+            <img src="images/icons/youtube.png" alt="">
+
+        </div>
+        <div class="footer-sub">
+            <h1 class="sub-title">
+                Subscribe
+            </h1>
+            <input type="email" name="" id="" placeholder="Enter Your Email">
+            <div class="footer-btn">
+                <button class="btn-secondary">Subscribe</button>
+            </div>
+
+        </div>
+
+    </footer>
 </body>
 
 </html>
